# auth_wrapper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install_skills.sh  pyproject.toml  tasklist_20260322_security_audit.md
Skills/auth_fastapi_skill/: SKILL.md
Skills/auth_fastapi_skill/assets/: auth-service-openapi-filtered.json  permissions-template.json
Skills/auth_fastapi_skill/references/: FAQ.md  auth-service-api.md  auth-service-organization-guide.md  auth-wrapper-library-full.md  implementation-details.md  library-api.md  migration-guide-full.md  org-hierarchy-guide-additional_detail.md  org-hierarchy-guide.md  permissions-design.md  registration.md  route-patterns.md  testing-troubleshooting.md
Skills/auth_quickstart/: SKILL.md
Skills/auth_quickstart_advanced/: SKILL.md
Skills/auth_service_ab0t/: SKILL.md  authz_layer_simple.md  faq_20_person_company_v2.md  faq_agent_company.md  faq_agent_company_v2.md  faq_company_auth.md  faq_company_auth_v2.md  faq_developer_tools_v1.md  faq_devops_platform_engineering_v2.md  faq_elearning_platform_v1.md  faq_finance_investment_bank_v2.md  faq_fintech_banking_v3.md  faq_gaming_multiplayer_v1.md  faq_government_clearance_v1.md  faq_healthcare_hospital_v2.md  faq_hosted_login.md  faq_law_firm_v1.md  faq_marketplace_twosided_v1.md  faq_msp_it_services_v1.md  faq_saas_reseller_whitelabel_v2.md  faq_simple_company.md  faq_simple_company_v2.md  faq_storyboard_service_connection_v1.md  faq_storyboard_service_connection_v2.md  faq_vaultdrive_v3.md
demo/: README.md  fastapi_server.py  flask_server.py
docs/: 10-fastapi-auth-integration-system-prompt.txt  DISCUSSION.md  TENANT_INTEGRATION_PROPOSAL.md
scripts/: benchmark.py  lint.py  publish.py  test.py
src/ab0t_auth/: __init__.py  cache.py  client.py  config.py  core.py  decorators.py  dependencies.py  errors.py  flask.py  guard.py  jwt.py  logging.py  middleware.py  permissions.py  tenant.py
tests/: __init__.py  conftest.py  test_api_key_server_permission.py  test_api_key_validation.py  test_bypass.py  test_check_callback.py  test_client_auth_header.py  test_core.py  test_flask.py  test_jwt.py  test_logging.py  test_permissions.py  test_security_failopen.py  test_security_vulnerabilities.py  test_server_permission_mode.py  test_tenant.py
tickets/: ISSUE-016-api-key-server-permission-check.md
tickets/2026-01-07-feature-auth-bypass-testing/: 01-design-proposal.txt  02-session-commands.txt  03-implementation.txt  04-test-improvements.txt  05-final-audit-report.txt  06-audit-scripts.txt  07-artifact-generation-system-prompt.txt  08-security-tests-advanced.txt  09-session-commands-security-tests.txt  11-fastapi-auth-integration-system-prompt-v2.txt  ticket.md
tickets/2026-01-07-fix-structlog-event-conflict/: 01-analysis.txt  02-verification.txt  03-test-coverage.txt  04-session-commands.txt  05-review-response.txt  06-edge-case-fix-commands.txt  07-final-audit.txt  ticket.md
tickets/2026-01-08-issue-8-header-names/: 01-issue-summary.txt
tickets/2026-01-08-issue-9-scoped-permissions/: 01-issue-summary.txt  02-analysis-existing-solutions.txt  03-implementation-plan-auth-check-callback.txt  04-security-audit-report.txt  05-fastapi-auth-integration-system-prompt-v3.txt  06-deep-security-review.md  07-security-risks-detailed-analysis.md  08-api-confusion-analysis.md
(+21 files in other folders)
