[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ab0t-auth"
version = "0.1.0"
description = "Authentication and authorization library for FastAPI and Flask using Ab0t auth service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ab0t", email = "dev@ab0t.com" }
]
keywords = [
    "fastapi",
    "flask",
    "authentication",
    "authorization",
    "jwt",
    "oauth",
    "ab0t",
    "middleware",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "PyJWT[crypto]>=2.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cachetools>=5.3.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
]
flask = [
    "flask>=2.3.0",
]
all = [
    "fastapi>=0.100.0",
    "flask>=2.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "pre-commit>=3.4.0",
    "fastapi>=0.100.0",
    "flask>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/ab0t/ab0t-auth"
Documentation = "https://docs.ab0t.com/auth-wrapper"
Repository = "https://github.com/ab0t/ab0t-auth"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ab0t_auth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["ab0t_auth"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ab0t_auth"]
skip = [".venv", "build", "dist"]

[tool.coverage.run]
source = ["src/ab0t_auth"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
